in-action/jenkins/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          volumeMounts:
            - name: jenkins-home
              subPath: jenkins2
              mountPath: /var/jenkins_home
      restartPolicy: Always
      volumes:
        - name: jenkins-home
          hostPath:
            path: /mnt/sdc/


---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - port: 8080
  type: NodePort
